--- a/HTML/PSD to HTML/cms-home.html
+++ b/HTML/PSD to HTML/cms-home.html
@@ -1,144 +1,229 @@
-<div class="">
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="border-bottom">
-        <div class="head-border pb-3 fs-4">CMS Page</div>
-    </div>
-    <div class="d-flex justify-content-between">
-        <div class="mt-3">
-            <input type="search" placeholder="Search" class="form-control">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CMS PAGE</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/home.css">
+</head>
+
+<body>
+    <div class="modal" tabindex="-1" id="deleteCMSPageModal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
         </div>
+    </div>
 
-        <div class="mt-3">
-            <a class="btn border rounded-pill px-sm-3 py-sm-2 px-1 orange-btn" style="border-color: #F88634 !important"
-                data-bs-target="#timeMissionModal" data-bs-toggle="modal">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#F88634" class="bi bi-plus-lg"
-                    viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
-                </svg> Add</a>
+    <div class="row m-0 gap-5">
+        <div class="col-2 text-white vh-100 d-none d-lg-block" id="sidebar">
+            <div class="mt-5 ms-3">NAVIGATION</div>
+            <a class="text-decoration-none text-white d-block mt-3 ps-3"> <img src="./images/user (4).png" alt="">
+                User</a>
+            <a class=" text-decoration-none d-block mt-3 cms-page text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-file-earmark" id="page" viewBox="0 0 16 16">
+                    <path
+                        d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z" />
+                </svg>
+                CMS
+                Page</a>
+            <a class="text-decoration-none text-white d-block mt-3 ps-3"><img src="./images/target (1).png" class="pe-3"
+                    alt=""> Mission</a>
+            <a class="text-decoration-none text-white d-block mt-3 ps-3"> <img src="./images/themes.png" class="pe-3"
+                    alt="">Mission Theme</a>
+            <a class="text-decoration-none text-white d-block mt-3 ps-3"><img src="./images/skills (1).png" class="pe-3"
+                    alt="">Mission Skills</a>
+            <a class="text-decoration-none text-white d-block  mt-3 ps-3"><img src="./images/folder.png" class="pe-3"
+                    alt="">Mission Application</a>
+            <a class="text-decoration-none text-white d-block mt-3 ps-3"> <img src="./images/tale.png" class="pe-3"
+                    alt="">Story</a>
+            <a class="text-decoration-none text-white d-block mt-3 ps-3"><img src="./images/folded-ribbon.png"
+                    class="pe-3" alt="">Banner Management</a>
+        </div>
+        <div class="col-lg-9 col-12 mt-3">
+            <nav>
+                <div class="d-flex justify-content-between">
+                    <div>
+
+                        Thursday, November 3, 2022, 10:06 AM
+
+                    </div>
+                    <div class="dropdown right-div mb-3">
+
+                        <img class="rounded-circle user-img" src="images/user-img.png" alt="#">
+                        <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline"
+                            data-bs-toggle="dropdown" aria-expanded="false" type="button" id="dropdownMenuButton1">Evan
+                            Donohue
+                            <img class="m-1" src="images/drop-down.png" alt="#">
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="border-bottom">
+                <div class="head-border pb-3 fs-4">CMS Page</div>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div class="mt-3">
+                    <input type="search" placeholder="Search" class="form-control">
+                </div>
+
+                <div class="mt-3">
+                    <a class="btn border rounded-pill px-sm-3 py-sm-2 px-1 orange-btn"
+                        style="border-color: #F88634 !important" data-bs-target="#timeMissionModal"
+                        data-bs-toggle="modal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#F88634"
+                            class="bi bi-plus-lg" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+                        </svg> Add</a>
+                </div>
+            </div>
+            <div class="table-responsive mt-3">
+                <table class="table">
+                    <thead>
+                        <tr class="cms-table">
+                            <th>Title</th>
+                            <th>Status</th>
+                            <th>Action</th>
+
+
+
+                        </tr>
+                    </thead>
+                    <tbody class="">
+
+
+
+                        <tr class="text-secondary font-size">
+
+                            <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Dicta
+                                pariatur minima nam delectus, quaerat expedita?</td>
+
+                            <td class="">Active</td>
+                            <td class="">
+                                <div class="d-flex gap-3">
+                                    <img src="./images/editing.png" alt="">
+                                    <a data-bs-target="#deleteCMSPageModal" data-bs-toggle="modal">
+                                        <img src="./images/bin.png" alt="">
+                                    </a>
+                                </div>
+
+                            </td>
+                        </tr>
+
+                        <tr class="text-secondary font-size">
+
+                            <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Dicta
+                                pariatur minima nam delectus, quaerat expedita?</td>
+
+                            <td class="">Active</td>
+                            <td class="">
+                                <div class="d-flex gap-3">
+                                    <img src="./images/editing.png" alt="">
+
+                                    <img src="./images/bin.png" alt="">
+                                </div>
+
+                            </td>
+                        </tr>
+
+                        <tr class="text-secondary font-size">
+
+                            <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Dicta
+                                pariatur minima nam delectus, quaerat expedita?</td>
+
+                            <td class="">Active</td>
+                            <td class="">
+                                <div class="d-flex gap-3">
+                                    <img src="./images/editing.png" alt="">
+
+                                    <img src="./images/bin.png" alt="">
+                                </div>
+
+                            </td>
+                        </tr>
+
+                        <tr class="text-secondary font-size">
+
+                            <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Dicta
+                                pariatur minima nam delectus, quaerat expedita?</td>
+
+                            <td class="">Active</td>
+                            <td class="">
+                                <div class="d-flex gap-3">
+                                    <img src="./images/editing.png" alt="">
+
+                                    <img src="./images/bin.png" alt="">
+                                </div>
+
+                            </td>
+                        </tr>
+
+                        <tr class="text-secondary font-size">
+
+                            <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Dicta
+                                pariatur minima nam delectus, quaerat expedita?</td>
+
+                            <td class="">Active</td>
+                            <td class="">
+                                <div class="d-flex gap-3">
+                                    <img src="./images/editing.png" alt="">
+
+                                    <img src="./images/bin.png" alt="">
+                                </div>
+
+                            </td>
+                        </tr>
+
+                        <tr class="text-secondary font-size">
+
+                            <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Dicta
+                                pariatur minima nam delectus, quaerat expedita?</td>
+
+                            <td class="">Active</td>
+                            <td class="">
+                                <div class="d-flex gap-3">
+                                    <img src="./images/editing.png" alt="">
+
+                                    <img src="./images/bin.png" alt="">
+                                </div>
+
+                            </td>
+                        </tr>
+
+
+                    </tbody>
+                </table>
+
+            </div>
         </div>
     </div>
-    <div class="table-responsive mt-3">
-        <table class="table">
-            <thead>
-                <tr class="cms-table">
-                    <th>Title</th>
-                    <th>Status</th>
-                    <th>Action</th>
 
-
-
-                </tr>
-            </thead>
-            <tbody class="">
-
-
-
-                <tr class="text-secondary font-size">
-
-                    <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dicta
-                        pariatur minima nam delectus, quaerat expedita?</td>
-
-                    <td class="">Active</td>
-                    <td class="">
-                        <div class="d-flex gap-3">
-                            <img src="./images/editing.png" alt="">
-
-                            <img src="./images/bin.png" alt="">
-                        </div>
-
-                    </td>
-                </tr>
-
-                <tr class="text-secondary font-size">
-
-                    <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dicta
-                        pariatur minima nam delectus, quaerat expedita?</td>
-
-                    <td class="">Active</td>
-                    <td class="">
-                        <div class="d-flex gap-3">
-                            <img src="./images/editing.png" alt="">
-
-                            <img src="./images/bin.png" alt="">
-                        </div>
-
-                    </td>
-                </tr>
-
-                <tr class="text-secondary font-size">
-
-                    <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dicta
-                        pariatur minima nam delectus, quaerat expedita?</td>
-
-                    <td class="">Active</td>
-                    <td class="">
-                        <div class="d-flex gap-3">
-                            <img src="./images/editing.png" alt="">
-
-                            <img src="./images/bin.png" alt="">
-                        </div>
-
-                    </td>
-                </tr>
-
-                <tr class="text-secondary font-size">
-
-                    <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dicta
-                        pariatur minima nam delectus, quaerat expedita?</td>
-
-                    <td class="">Active</td>
-                    <td class="">
-                        <div class="d-flex gap-3">
-                            <img src="./images/editing.png" alt="">
-
-                            <img src="./images/bin.png" alt="">
-                        </div>
-
-                    </td>
-                </tr>
-
-                <tr class="text-secondary font-size">
-
-                    <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dicta
-                        pariatur minima nam delectus, quaerat expedita?</td>
-
-                    <td class="">Active</td>
-                    <td class="">
-                        <div class="d-flex gap-3">
-                            <img src="./images/editing.png" alt="">
-
-                            <img src="./images/bin.png" alt="">
-                        </div>
-
-                    </td>
-                </tr>
-
-                <tr class="text-secondary font-size">
-
-                    <td>Education Programme Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dicta
-                        pariatur minima nam delectus, quaerat expedita?</td>
-
-                    <td class="">Active</td>
-                    <td class="">
-                        <div class="d-flex gap-3">
-                            <img src="./images/editing.png" alt="">
-
-                            <img src="./images/bin.png" alt="">
-                        </div>
-
-                    </td>
-                </tr>
-
-
-            </tbody>
-        </table>
-
-    </div>
-</div>
+    <script src="./js/bootstrap.min.js"></script>
+</body>
